--- a/Reynolds_Currie_2024_transit_supply_index_GTFS.Rmd
+++ b/Reynolds_Currie_2024_transit_supply_index_GTFS.Rmd
@@ -1,31 +1,25 @@
+
 ---
-title: Leveraging GTFS data to calculate an open-source Transit Supply Index
-runningheader: "Reynolds and Currie"
-author:
-  - name: James Reynolds
-    note: Corresponding Author
-    position: Research Fellow
-    email: james.reynolds@monash.edu
-    affiliation: Public Transport Research Group, Institute of Transport Studies, Department of Civil Engineering, Monash University, Victoria, Australia
-  - name: Graham Currie
-  
-    position: Professor
-    email: graham.currie@monash.edu
-    affiliation: Public Transport Research Group, Institute of Transport Studies, Department of Civil Engineering, Monash University, Victoria, Australia
-abstract: |
-  TBC.
-  
-keywords: ["Transit", "Public transport", "GTFS", "Benchmarking"]
+title: "Leveraging GTFS data to calculate an open-source Transit Supply Index"
+runningheader: "Reynolds and Currie" # only for pdf output
+subtitle: "An implementation in R Markdown" # only for html output
+author: "James Reynolds and Graham Currie"
+date: "`r Sys.Date()`"
+output:
+  tufte::tufte_html: default
+  tufte::tufte_handout:
+    citation_package: natbib
+    latex_engine: xelatex
+  tufte::tufte_book:
+    citation_package: natbib
+    latex_engine: xelatex
 bibliography: [packages.bib, References.bib]
-biblio-style: unsrtnat
-classoption:
-  - numbered #  When numbered option is activated, lines are numbered.
-output: rticles::trb_article
-wordcount: 684
+link-citations: yes
 ---
 
-```{r setup, include = FALSE}
+```{r setup, include=FALSE}
 library(tufte)
+
 library(tidyverse)
 library(dplyr)
 library(tidytransit)
@@ -48,9 +42,8 @@ library(scales)
 library(gtfstools)
 library(lubridate)
 
-
-
-knitr::opts_chunk$set(echo = FALSE)
+# invalidate cache when the tufte version changes
+knitr::opts_chunk$set(cache.extra = packageVersion('tufte'))
 ```
 
 
@@ -511,135 +504,269 @@ convert_SI_list_by_date_and_mode_to_SI_df_by_mode.function <- function(SI_list_b
 These three cases were selected as they are familiar to the researchers, and as there is likely to be enough variety in how the GTFS feeds, potential areas of interest and other aspects are set up such that the developed code will likely be generalis-able to other places.  Additionally, the case selection continues the long-standing practice of comparing Melbourne and Toronto, as well as grounding one of the three cases in the context of the transit system where the Transportation Research Board Annual Meeting is located (which is likely to be familiar to many readers).  
 
 ### Melbourne, Victoria, Australia
-Melbourne is INSERT DESCRIPTION OF MELBOURNE HERE
+Greater Melbourne is a geographic area that is similar to that of the metropolitan areas of Paris or London, but with only around 5 million people has about one-third of the population. It consists of a inner Central Business District (CBD) with appartments, commercial skyscrapers and extensive sporting facilities nearby; surrounded by low-density, predominately single-family-housing-dominated, inner, middle and outer suburbs.There are predominately radial train and tram networks, but for most of the suburban areas the reality is that transit is provided by circuitious bus routes that are mostly used by those who cannot otherwise drive. An extensive freeway (and tollway) network provides connections across the Greater Melbourne area, further around Port Phillip Bay to Geelong (south-west) and the Mornington Penninsula (south-east) as well as to regional centres elsewhere in Victoria. There is a state-wide regional train and bus network, which also provides connections into South Australia, New South Wales and the Australian Capital Territory (Canberra) and local bus services in many regional towns and cities. However, accessibility to most of the city and state tends to be car-dominated, with transit mode share only accounting for XX% across Greater Melbourne and YY% across Victoria. The journey-to-work transit mode shares, however, are ZZ% across Greater Melbourne and PP% for travel into the CBD, which is reflective of the monocentric nature of the railway network, which focuses on Southern Cross Station (Spencer Street) for regional services and on a five-station City Loop (Southern Cross, Flinders Street, Parliament, Melbourne Central and Flagstaff) the helps to distribute commuters to workplaces across the CBD.
 
 Melbourne's GTFS feed is published by Public Transport Victoria (PTV). There are over 400 historical releases of the  available on the transitfeeds.com website, with the first dating from March 2015 [@transitfeeds_victoria:2023aa]. The Australian census is undertaken in early August every 5 years, with the last two being in 2016 and 2021. GTFS feeds were therefore selected for the first week of August of each year for the purposes of this test analysis, so that the date of measurement of the Supply Index matches the census dates.
 
 
-
-<!--- Don't run 2022 for the moment
-
-
-```{r Melbourne_2022, echo=FALSE, warning=FALSE, message=FALSE}
-
-victoria_2022 <- read_gtfs("data/Melbourne/2022/gtfs.zip")
-
-#identify duplicate stops
-victoria_2022_duplicated_stops <- tabyl(victoria_2022$stops$stop_id) %>% filter (n>1)
-names(victoria_2022_duplicated_stops) <- c("stop_id", "n", "percent")
-victoria_2022_duplicated_stops <- left_join(victoria_2022_duplicated_stops, victoria_2022$stops)
-
-#discard duplicates
-victoria_2022$stops <- victoria_2022$stops[!duplicated(victoria_2022$stops$stop_id),]
-
-#split modes
-victoria_2022_list_by_mode <- split_gtfs_into_modes_and_put_in_list(victoria_2022)
-
-#set inputs to SI_calc function
-victoria_areas_of_interest <- lga2021 %>% filter(state_name_2021 == "Victoria")
-start_date = "2022-08-04"
-period_in_days = 7
-EPSG_for_transform = 28355
-areas_of_interest_id_field = "lga_code_2021"
-
-#run SI_calc function
-victoria_2022_SI_list_by_date_and_mode <- SI_calc_function(areas_of_interest =  victoria_areas_of_interest, areas_of_interest_id_field = areas_of_interest_id_field, gtfs_list_by_mode = victoria_2022_list_by_mode, start_date = start_date, period_in_days = period_in_days, EPSG_for_transform = EPSG_for_transform)
-
-#run aggregation function to create df by mode for all 7 days
-victoria_2022_SI_df_by_mode <-  convert_SI_list_by_date_and_mode_to_SI_df_by_mode.function(victoria_2022_SI_list_by_date_and_mode)
+Minor corrections were made to the GTFS files to remove duplicate stop_ids. These involved minor discrepancies in either the stop name, latitude or longitude. The Australian Bureau of Statistics (ABS) provides a range of shape files and other resources, and this study made use of the absmapsdata R package [@R-absmapsdata] to access the 2021 Local Government Area (LGA) boundaries for the Greater Melbourne area.  The EPSG:28355 transform [@EPSG_28355] was used to shift longitude and latitude into metres, as per the Geocentric Datum of Australia 1994 (GDA95 / MGA zone 55) coordinates. 
 
 
 
-```
-
---->
 
 ```{r Melbourne_2021, echo=FALSE, warning=FALSE, message=FALSE}
-victoria_2021 <- read_gtfs("data/Melbourne/2021/gtfs.zip")
-
-#identify duplicate stops
-victoria_2021_duplicated_stops <- tabyl(victoria_2021$stops$stop_id) %>% filter (n>1)
-names(victoria_2021_duplicated_stops) <- c("stop_id", "n", "percent")
-victoria_2021_duplicated_stops <- left_join(victoria_2021_duplicated_stops, victoria_2021$stops)
-
-#discard duplicates
-victoria_2021$stops <- victoria_2021$stops[!duplicated(victoria_2021$stops$stop_id),]
-
-#split modes
-victoria_2021_list_by_mode <- split_gtfs_into_modes_and_put_in_list(victoria_2021)
 
 
-#set inputs to SI_calc function
-victoria_areas_of_interest <- lga2021 %>% filter(state_name_2021 == "Victoria")
-start_date = "2021-08-10"
-period_in_days = 7
-EPSG_for_transform = 28355
-areas_of_interest_id_field = "lga_code_2021"
+#victoria_2021 <- read_gtfs("data/Melbourne/2021/gtfs.zip")
 
-#run SI_calc function
-victoria_2021_SI_list_by_date_and_mode <- SI_calc_function(areas_of_interest =  victoria_areas_of_interest, areas_of_interest_id_field = areas_of_interest_id_field, gtfs_list_by_mode = victoria_2021_list_by_mode, start_date = start_date, period_in_days = period_in_days, EPSG_for_transform = EPSG_for_transform)
+##identify duplicate stops
+#victoria_2021_duplicated_stops <- tabyl(victoria_2021$stops$stop_id) %>% filter (n>1)
+#names(victoria_2021_duplicated_stops) <- c("stop_id", "n", "percent")
+#victoria_2021_duplicated_stops <- left_join(victoria_2021_duplicated_stops, victoria_2021$stops)
 
-#run aggregation function to create df by mode for all 7 days
-victoria_2021_SI_df_by_mode <-  convert_SI_list_by_date_and_mode_to_SI_df_by_mode.function(victoria_2021_SI_list_by_date_and_mode)
+##discard duplicates
+#victoria_2021$stops <- victoria_2021$stops[!duplicated(victoria_2021$stops$stop_id),]
+
+##split modes
+#victoria_2021_list_by_mode <- split_gtfs_into_modes_and_put_in_list(victoria_2021)
 
 
+##set inputs to SI_calc function
+#victoria_areas_of_interest <- lga2021 %>% filter(state_name_2021 == "Victoria")
+#start_date = "2021-08-10"
+#period_in_days = 7
+#EPSG_for_transform = 28355
+#areas_of_interest_id_field = "lga_code_2021"
+
+##run SI_calc function
+#victoria_2021_SI_list_by_date_and_mode <- SI_calc_function(areas_of_interest =  victoria_areas_of_interest, areas_of_interest_id_field = areas_of_interest_id_field, gtfs_list_by_mode = victoria_2021_list_by_mode, start_date = start_date, period_in_days = period_in_days, EPSG_for_transform = EPSG_for_transform)
+
+##run aggregation function to create df by mode for all 7 days
+#victoria_2021_SI_df_by_mode <-  convert_SI_list_by_date_and_mode_to_SI_df_by_mode.function(victoria_2021_SI_list_by_date_and_mode)
+
+#load pre-calculated df by mode (for just one day)
+victoria_2021_SI_df_by_mode <- read.csv("victoria_2021_SI_df_by_mode_20210810.csv")
+victoria_2021_SI_df_by_mode$lga_code_2021 <- as.character(victoria_2021_SI_df_by_mode$lga_code_2021)
+
+
+#load LGA map data
+LGA_map_data <- lga2021
+
+
+#Join SI to LGA map data
+victoria_2021_SI_df_by_mode_sf <- left_join(victoria_2021_SI_df_by_mode, lga2021)
 
 ```
 
 ```{r Melbourne_2016, echo=FALSE, warning=FALSE, message=FALSE}
-victoria_2016 <- read_gtfs("data/Melbourne/2016/gtfs.zip")
+#victoria_2016 <- read_gtfs("data/Melbourne/2016/gtfs.zip")
 
-#identify duplicate stops
-victoria_2016_duplicated_stops <- tabyl(victoria_2016$stops$stop_id) %>% filter (n>1)
-names(victoria_2016_duplicated_stops) <- c("stop_id", "n", "percent")
-victoria_2016_duplicated_stops <- left_join(victoria_2016_duplicated_stops, victoria_2016$stops)
+##identify duplicate stops
+#victoria_2016_duplicated_stops <- tabyl(victoria_2016$stops$stop_id) %>% filter (n>1)
+#names(victoria_2016_duplicated_stops) <- c("stop_id", "n", "percent")
+#victoria_2016_duplicated_stops <- left_join(victoria_2016_duplicated_stops, victoria_2016$stops)
 
-#discard duplicates
-victoria_2016$stops <- victoria_2016$stops[!duplicated(victoria_2016$stops$stop_id),]
+##discard duplicates
+#victoria_2016$stops <- victoria_2016$stops[!duplicated(victoria_2016$stops$stop_id),]
 
-#split modes
-victoria_2016_list_by_mode <- split_gtfs_into_modes_and_put_in_list(victoria_2016)
-
-
-#set inputs to SI_calc function
-victoria_areas_of_interest <- lga2021 %>% filter(state_name_2021 == "Victoria")
-start_date = "2016-08-09"
-period_in_days = 7
-EPSG_for_transform = 28355
-areas_of_interest_id_field = "lga_code_2021"
-
-#run SI_calc function
-victoria_2016_SI_list_by_date_and_mode <- SI_calc_function(areas_of_interest =  victoria_areas_of_interest, areas_of_interest_id_field = areas_of_interest_id_field, gtfs_list_by_mode = victoria_2016_list_by_mode, start_date = start_date, period_in_days = period_in_days, EPSG_for_transform = EPSG_for_transform)
-
-#run aggregation function to create df by mode for all 7 days
-victoria_2021_SI_df_by_mode <-  convert_SI_list_by_date_and_mode_to_SI_df_by_mode.function(victoria_2021_SI_list_by_date_and_mode)
+##split modes
+#victoria_2016_list_by_mode <- split_gtfs_into_modes_and_put_in_list(victoria_2016)
 
 
+##set inputs to SI_calc function
+#victoria_areas_of_interest <- lga2021 %>% filter(state_name_2021 == "Victoria")
+#start_date = "2016-08-09"
+#period_in_days = 7
+#EPSG_for_transform = 28355
+#areas_of_interest_id_field = "lga_code_2021"
+
+##run SI_calc function
+#victoria_2016_SI_list_by_date_and_mode <- SI_calc_function(areas_of_interest =  victoria_areas_of_interest, areas_of_interest_id_field = areas_of_interest_id_field, gtfs_list_by_mode = victoria_2016_list_by_mode, start_date = start_date, period_in_days = period_in_days, EPSG_for_transform = EPSG_for_transform)
+
+##run aggregation function to create df by mode for all 7 days
+#victoria_2021_SI_df_by_mode <-  convert_SI_list_by_date_and_mode_to_SI_df_by_mode.function(victoria_2021_SI_list_by_date_and_mode)
+
+
+#load pre-calculated df by mode (for just one day)
+victoria_2016_SI_df_by_mode <- read.csv("victoria_2016_SI_df_by_mode_20210810.csv")
+
+victoria_2016_SI_df_by_mode$lga_code_2021 <- as.character(victoria_2016_SI_df_by_mode$lga_code_2021)
+
+
+#load LGA map data
+LGA_map_data <- lga2021
+
+#Add Greater Melbourne to LGA map data
+LGA_greater_melbourne <- read_csv("LGA_2021_greater_melbourne.csv")
+LGA_map_data <- left_join(LGA_map_data, LGA_greater_melbourne[,2:3])
 
 ```
 
 
-
-Minor corrections were made to the GTFS files to remove duplicate stop_ids. These involved minor discrepancies in either the stop name, latitude or longitude. 
-
-
-The Australian Bureau of Statistics (ABS) provides a range of shape files and other resources, and this study made use of the absmapsdata R package [@R-absmapsdata] to access the 2021 Local Government Area (LGA) boundaries for the Greater Melbourne area.  The EPSG:28355 transform [@EPSG_28355] was used to shift longitude and latitude into metres as per the Geocentric Datum of Australia 1994 (GDA95 / MGA zone 55) coordinates. 
 
 
 
 ### Toronto, Ontario, Canada
 ### Washington DC, USA
 
-
-
-
 # Results
-
 The code is available at https://github.com/James-Reynolds/Transit_Supply_Index_GTFS as an Rmarkdown file (used to typeset this paper). The following subsections discuss the results of cases studies used to develop and test the code. 
 
 
-## Melbourne
- Results are summarized in the following:  
+## Victoria, Australia
+
+### Transit Supply Index
+
+
+
+```{r Victoria_SI_2021, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "SI for 2021 census day (August 10th) by LGA", fig.show="hold", out.width="50%"}
+victoria_2021_SI_total <- victoria_2021_SI_df_by_mode %>% adorn_totals(where = "col")
+
+victoria_2021_SI_total <- left_join(victoria_2021_SI_total, LGA_map_data)
+
+
+map <- victoria_2021_SI_total %>%
+  filter(state_name_2021 == "Victoria") %>%   
+  ggplot() +
+  geom_sf(aes(geometry = geometry,  # use the geometry variable
+             fill = Total),     # fill by TOtal SI
+          lwd = 0,                  # remove borders
+         show.legend = TRUE) +   # keep legend
+  scale_fill_gradient2(breaks = c(0.01, 1, 50), trans = "log") +    # fill colours on log scale
+# geom_point(aes(cent_long,
+    #           cent_lat),        # use the centroid long (x) and lats (y)
+   #          colour = "white") +    # make the points white
+  theme_void() +                    # clears other plot elements
+ coord_sf()
+
+map
+
+
+
+map <- victoria_2021_SI_total %>%
+  filter(greater_melbourne == TRUE) %>%   # let's just look Melbourne
+  ggplot() +
+  geom_sf(aes(geometry = geometry,  # use the geometry variable
+             fill = Total),     # fill by TOtal SI
+          lwd = 0,                  # remove borders
+         show.legend = TRUE) +
+  scale_fill_gradient2(breaks = c(0.01, 1, 50, 500), trans = "log") +    # fill colours on log scale
+# geom_point(aes(cent_long,
+    #           cent_lat),        # use the centroid long (x) and lats (y)
+   #          colour = "white") +    # make the points white
+  theme_void() +                    # clears other plot elements
+ coord_sf()
+
+map
+
+
+
+```
+
+
+
+```{r Victoria_SI_2016, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "SI for 2016 census day (August 9th) by LGA", fig.show="hold", out.width="50%"}
+victoria_2016_SI_total <- victoria_2021_SI_df_by_mode %>% adorn_totals(where = "col")
+
+victoria_2016_SI_total <- left_join(victoria_2016_SI_total, LGA_map_data)
+
+
+map <- victoria_2016_SI_total %>%
+  filter(state_name_2021 == "Victoria") %>%   
+  ggplot() +
+  geom_sf(aes(geometry = geometry,  # use the geometry variable
+             fill = Total),     # fill by TOtal SI
+          lwd = 0,                  # remove borders
+         show.legend = TRUE) +   # keep legend
+  scale_fill_gradient2(breaks = c(0.01, 1, 50), trans = "log") +    # fill colours on log scale
+# geom_point(aes(cent_long,
+    #           cent_lat),        # use the centroid long (x) and lats (y)
+   #          colour = "white") +    # make the points white
+  theme_void() +                    # clears other plot elements
+ coord_sf()
+
+map
+
+
+
+map <- victoria_2016_SI_total %>%
+  filter(greater_melbourne == TRUE) %>%   # let's just look Melbourne
+  ggplot() +
+  geom_sf(aes(geometry = geometry,  # use the geometry variable
+             fill = Total),     # fill by TOtal SI
+          lwd = 0,                  # remove borders
+         show.legend = TRUE) +
+  scale_fill_gradient2(breaks = c(0.01, 1, 50, 500), trans = "log") +    # fill colours on log scale
+# geom_point(aes(cent_long,
+    #           cent_lat),        # use the centroid long (x) and lats (y)
+   #          colour = "white") +    # make the points white
+  theme_void() +                    # clears other plot elements
+ coord_sf()
+
+map
+
+
+
+
+```
+
+
+
+```{r Victoria_SI_changes, echo=FALSE, warning=FALSE, message=FALSE, fig.cap= "SI for 2016 census day (August 9th) by LGA", fig.show="hold", out.width="50%"}
+victoria_difference_2021_2016_SI <- victoria_2021_SI_df_by_mode 
+victoria_difference_2021_2016_SI[,2:ncol(victoria_difference_2021_2016_SI)] <- victoria_difference_2021_2016_SI[,2:ncol(victoria_difference_2021_2016_SI)] -  victoria_2016_SI_df_by_mode[,2:ncol(victoria_difference_2021_2016_SI)]
+
+victoria_difference_2021_2016_SI <- victoria_difference_2021_2016_SI %>% adorn_totals(where = "col")
+
+
+victoria_difference_2021_2016_SI <- left_join(victoria_difference_2021_2016_SI, LGA_map_data)
+
+
+
+
+map <- victoria_difference_2021_2016_SI %>%
+  filter(state_name_2021 == "Victoria") %>%   
+  ggplot() +
+  geom_sf(aes(geometry = geometry,  # use the geometry variable
+             fill = Total),     # fill by TOtal SI
+          lwd = 0,                  # remove borders
+         show.legend = TRUE) +   # keep legend
+  scale_fill_gradient2() +    # fill colours on log scale
+# geom_point(aes(cent_long,
+    #           cent_lat),        # use the centroid long (x) and lats (y)
+   #          colour = "white") +    # make the points white
+  theme_void() +                    # clears other plot elements
+ coord_sf()
+
+map
+
+
+
+map <- victoria_difference_2021_2016_SI %>%
+  filter(greater_melbourne == TRUE) %>%   # let's just look Melbourne
+  ggplot() +
+  geom_sf(aes(geometry = geometry,  # use the geometry variable
+             fill = Total),     # fill by TOtal SI
+          lwd = 0,                  # remove borders
+         show.legend = TRUE) +
+  scale_fill_gradient2() +    # fill colours on log scale
+# geom_point(aes(cent_long,
+    #           cent_lat),        # use the centroid long (x) and lats (y)
+   #          colour = "white") +    # make the points white
+  theme_void() +                    # clears other plot elements
+ coord_sf()
+
+map
+
+
+
+
+```
+
+
+
+
+### Transit needs
 
 
 
