Send to github prior to cloning to C: drive on uni laptop

--- a/References.bib
+++ b/References.bib
@@ -16,13 +16,11 @@
 	year = {2013},
 	bdsk-url-1 = {https://doi.org/10.3141/2338-02}}
 
-@inproceedings{currie2007identifying,
+@article{currie2007identifying,
 	author = {Currie, Graham and Senbergs, Zed},
 	booktitle = {Australasian Transport Research Forum},
-	date-added = {2023-06-25 13:52:07 +1000},
-	date-modified = {2023-06-25 13:52:07 +1000},
 	organization = {Australasian Transport Research Forum},
-	title = {Identifying spatial gaps in public transport provision for socially disadvantages Australians: the Melbourne needs-gap study},
+	title = {{Identifying spatial gaps in public transport provision for socially disadvantaged Australians: the Melbourne needs-gap study}},
 	year = {2007}}
 
 @article{WalkScore:2023tg,
@@ -55,10 +53,10 @@
 	
 	
 @Manual{GTFS,
-  title = {General Transit Feed Specification (GTFS)},
+  title = {{General Transit Feed Specification (GTFS)}},
   author = {{MobilityData}},
   year = {undated},
-  url = {https://gtfs.org/},
+  url = {{https://gtfs.org/}},
 }
 
 
