--- a/References.bib
+++ b/References.bib
@@ -229,3 +229,29 @@ eprint = {https://doi.org/10.1080/01441647.2020.1762795}
 	year = {2023}}
 
 	
+@article{KetokiviMikko2014Rocr,
+issn = {0272-6963},
+abstract = {Since the seminal article by Eisenhardt (1989), scholarly interest in case research has mushroomed in operations management and organization sciences. Volumes of methodological texts are matched with a massive amount of empirical research that seeks to apply and further develop case research as a scientific method. What is missing from this literature is a treatment of the methodological diversity of case research. In this paper, we seek to unveil this heterogeneity by describing three distinct methodological accounts of case study: theory generation, theory testing, and theory elaboration. Each approach has its own idiosyncrasies, in particular when it comes to the interplay between theory and empirics. A typical case research incorporates both existing theories and empirical data to varying degrees. In light of this heterogeneity, we re-interpret key aspects of extant contributions and discuss guidelines for future case research. We propose that ultimately, case research rigor is determined by attention to idiosyncrasy and transparency of reasoning. We conclude by arguing that we have witnessed in the past 25 years in organization research what amounts to the Renaissance of case research.},
+journal = {Journal of operations management},
+pages = {232--240},
+volume = {32},
+publisher = {Elsevier B.V},
+number = {5},
+year = {2014},
+title = {Renaissance of case research as a scientific method},
+copyright = {2014 Elsevier B.V.},
+language = {eng},
+address = {Chicago},
+author = {Ketokivi, Mikko and Choi, Thomas},
+keywords = {Case research ; Empirical analysis ; Guidelines ; Heterogeneity ; Methodology ; Operations management ; Organization theory ; Organizations ; Reasoning ; Research methodology ; Scientific method ; Studies ; Texts ; Theory building ; Theory elaboration ; Theory testing},
+}
+
+
+@Manual{EPSG_28355,
+  title = {EPSG:28355; GDA94/MGA zone 55},
+  author = {{EPSG}},
+  year = {1995},
+  url = {https://epsg.io/28355},
+}
+  
+
